--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "babel-preset-react": "^6.1.18",
     "babel-preset-stage-0": "^6.1.18",
     "express": "^4.13.3",
-    "history": "^1.15.0",
+    "history": "^1.16.0",
+    "path-is-inside": "^1.0.1",
     "react": "^0.14.1",
     "react-dom": "^0.14.1",
     "react-redux": "^4.0.0",
