--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
     "babel-preset-stage-0": "^6.1.18",
+    "body-parser": "^1.14.2",
     "express": "^4.13.3",
     "history": "^1.16.0",
     "path-is-inside": "^1.0.1",
