added tagsinput and modal

--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "path-is-inside": "^1.0.1",
     "react": "^0.14.1",
     "react-dom": "^0.14.1",
+    "react-modal": "^0.6.1",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.0",
+    "react-tagsinput": "^3.0.3",
     "redux": "^3.0.4",
     "redux-router": "^1.0.0-beta3",
     "superagent": "^1.4.0",
