--- a/package.json
+++ b/package.json
@@ -29,7 +29,11 @@
     "babel-preset-stage-0": "^6.1.18",
     "body-parser": "^1.14.2",
     "express": "^4.13.3",
+    "file-loader": "^0.8.5",
+    "font-awesome": "^4.5.0",
+    "font-awesome-webpack": "0.0.4",
     "history": "^1.16.0",
+    "less": "^2.3.1",
     "path-is-inside": "^1.0.1",
     "react": "^0.14.1",
     "react-dom": "^0.14.1",
@@ -37,10 +41,11 @@
     "react-redux": "^4.0.0",
     "react-router": "^1.0.0",
     "react-tagsinput": "^3.0.3",
-    "reacticons": "0.0.1",
     "redux": "^3.0.4",
     "redux-router": "^1.0.0-beta3",
+    "square-file-icons": "^1.2.1",
     "superagent": "^1.4.0",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.2"
   }
 }
