--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-preset-react": "^6.1.18",
     "babel-preset-stage-0": "^6.1.18",
     "body-parser": "^1.14.2",
+    "css-loader": "^0.23.1",
     "express": "^4.13.3",
     "file-loader": "^0.8.5",
     "font-awesome": "^4.5.0",
@@ -36,6 +37,7 @@
     "less": "^2.3.1",
     "path-is-inside": "^1.0.1",
     "react": "^0.14.1",
+    "react-datepicker": "^0.17.0",
     "react-dom": "^0.14.1",
     "react-modal": "^0.6.1",
     "react-redux": "^4.0.0",
@@ -44,6 +46,7 @@
     "redux": "^3.0.4",
     "redux-router": "^1.0.0-beta3",
     "square-file-icons": "^1.2.1",
+    "style-loader": "^0.13.0",
     "superagent": "^1.4.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.2"
